--- a/eval_results_empirical.ipynb
+++ b/eval_results_empirical.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -60,27 +60,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if dataset == \"booking\":\n",
+    "    input_dir = input_dir + \"old_topic_wordering/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "8\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['k_10_unweighted_topics',\n",
-       " 'k_50_unweighted_topics',\n",
-       " 'k_30_unweighted_topics',\n",
-       " 'old_topic_wordering',\n",
-       " 'k_20_unweighted_topics']"
+       "['w_intercept', 'k_200', 'k_30', 'k_150', 'k_20', 'k_10', 'k_100', 'k_50']"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,21 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/nfs/home/maxa/results/booking/scholar/k_200'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-203-462956bebb4e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mpplxies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mruns_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput_dir\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mrun\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mruns_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         pRs.append(pd.read_csv(os.path.join(runs_dir,run,'test_eval_pR2.txt'),\n\u001b[1;32m     11\u001b[0m                                header = None).values[0][0])\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/nfs/home/maxa/results/booking/scholar/k_200'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pR = pd.DataFrame()\n",
     "mse = pd.DataFrame()\n",
@@ -147,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +220,7 @@
        "k_50   0.493856  0.003874"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,16 +232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\\\begin{tabular}{lrr}\\n\\\\toprule\\n{} &      mean &       std \\\\\\\\\\n\\\\midrule\\nk\\\\_200 &  0.378978 &  0.042709 \\\\\\\\\\nk\\\\_30  &  0.494797 &  0.002571 \\\\\\\\\\nk\\\\_150 &  0.481989 &  0.012730 \\\\\\\\\\nk\\\\_20  &  0.495444 &  0.003129 \\\\\\\\\\nk\\\\_10  &  0.493897 &  0.004791 \\\\\\\\\\nk\\\\_100 &  0.489331 &  0.002454 \\\\\\\\\\nk\\\\_50  &  0.493856 &  0.003874 \\\\\\\\\\n\\\\bottomrule\\n\\\\end{tabular}\\n'"
+       "'\\\\begin{tabular}{lrr}\\n\\\\toprule\\n{} &      mean &       std \\\\\\\\\\n\\\\midrule\\nk\\\\_200 &  0.378978 &  0.042709 \\\\\\\\\\nk\\\\_30  &  0.494797 &  0.002571 \\\\\\\\\\nk\\\\_150 &  0.484798 &  0.002750 \\\\\\\\\\nk\\\\_20  &  0.495444 &  0.003129 \\\\\\\\\\nk\\\\_10  &  0.493897 &  0.004791 \\\\\\\\\\nk\\\\_100 &  0.489331 &  0.002454 \\\\\\\\\\nk\\\\_50  &  0.493856 &  0.003874 \\\\\\\\\\n\\\\bottomrule\\n\\\\end{tabular}\\n'"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -299,8 +293,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_150</th>\n",
-       "      <td>26454356774749</td>\n",
-       "      <td>118307479071041</td>\n",
+       "      <td>223516</td>\n",
+       "      <td>173745</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k_20</th>\n",
@@ -330,14 +324,14 @@
        "                      mean                  std\n",
        "k_200 -9223372036854775808 -9223372036854775808\n",
        "k_30                  2110                  396\n",
-       "k_150       26454356774749      118307479071041\n",
+       "k_150               223516               173745\n",
        "k_20                  1420                  163\n",
        "k_10                   941                  134\n",
        "k_100                31601                19590\n",
        "k_50                  5014                 1314"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
