--- a/import_custom_data_semisynth_booking.ipynb
+++ b/import_custom_data_semisynth_booking.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
      "output_type": "stream",
      "text": [
       "/nfs/home/maxa/data/semisynth_btr/ \n",
-      " /nfs/home/maxa/data/semisynth_btr/scholar/\n"
+      " /nfs/home/maxa/data/semisynth_btr/scholar_ct/\n"
      ]
     }
    ],
@@ -55,8 +55,28 @@
     "    output_dir = raw_data_path + \"scholar/\"\n",
     "else:\n",
     "    raw_data_path = \"/nfs/home/maxa/data/semisynth_btr/\"\n",
-    "    output_dir = raw_data_path + \"scholar/\"\n",
+    "    output_dir = raw_data_path + \"scholar_ct/\"\n",
     "print(raw_data_path, \"\\n\",output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/nfs/home/maxa/data/semisynth_btr/scholar_ct/'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_dir"
    ]
   },
   {
@@ -68,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +191,7 @@
        "[16337 rows x 1 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +211,7 @@
        "16337"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#length = 50000\n",
+    "#train_ids = [\"train_\" + str(x) for x in list(range(length))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,25 +324,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "semisynth_data = pd.read_csv(raw_data_path + \"booking_semisynth_sample.csv\",header = 0)"
+    "#semisynth_data = pd.read_csv(raw_data_path + \"booking_semisynth_sample.csv\",header = 0)\n",
+    "semisynth_data = pd.read_csv(raw_data_path + \"booking_semisynth_cont_sample.csv\",header = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50000, 18)"
+       "(50000, 19)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -365,6 +396,7 @@
        "      <th>synth_y</th>\n",
        "      <th>bar_rest</th>\n",
        "      <th>conf</th>\n",
+       "      <th>pos_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -382,12 +414,13 @@
        "      <td>Everything was great Cozy clean and just perf...</td>\n",
        "      <td>everyth great cozi clean just perfect breakfas...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.062683</td>\n",
-       "      <td>0.413793</td>\n",
+       "      <td>0.924254</td>\n",
+       "      <td>-0.388227</td>\n",
        "      <td>-0.501244</td>\n",
-       "      <td>3.547939</td>\n",
+       "      <td>-1.417294</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.679363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -403,12 +436,13 @@
        "      <td>Good location .  We travel through to Kensing...</td>\n",
        "      <td>good locat travel kensington everi week great ...</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.645357</td>\n",
-       "      <td>0.166667</td>\n",
+       "      <td>0.959160</td>\n",
+       "      <td>-1.114970</td>\n",
        "      <td>-1.574335</td>\n",
-       "      <td>0.105846</td>\n",
+       "      <td>-3.844723</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1.212040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -424,12 +458,13 @@
        "      <td>Not Much.  Room was dirty carpet very tired w...</td>\n",
        "      <td>much room dirti carpet tire wifi stop work who...</td>\n",
        "      <td>3</td>\n",
-       "      <td>-1.209426</td>\n",
-       "      <td>0.103448</td>\n",
+       "      <td>-0.950397</td>\n",
+       "      <td>-1.300881</td>\n",
        "      <td>-1.574335</td>\n",
-       "      <td>-0.681302</td>\n",
+       "      <td>-4.792447</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>-0.871667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -457,17 +492,17 @@
        "2       1   Not Much.  Room was dirty carpet very tired w...   \n",
        "\n",
        "                                          text_clean  doc_idx  sentiment  \\\n",
-       "0  everyth great cozi clean just perfect breakfas...        1   1.062683   \n",
-       "1  good locat travel kensington everi week great ...        2   0.645357   \n",
-       "2  much room dirti carpet tire wifi stop work who...        3  -1.209426   \n",
+       "0  everyth great cozi clean just perfect breakfas...        1   0.924254   \n",
+       "1  good locat travel kensington everi week great ...        2   0.959160   \n",
+       "2  much room dirti carpet tire wifi stop work who...        3  -0.950397   \n",
        "\n",
-       "   pos_prop  av_score   synth_y  bar_rest  conf  \n",
-       "0  0.413793 -0.501244  3.547939         0     0  \n",
-       "1  0.166667 -1.574335  0.105846         0     0  \n",
-       "2  0.103448 -1.574335 -0.681302         0     1  "
+       "   pos_prop  av_score   synth_y  bar_rest  conf  pos_score  \n",
+       "0 -0.388227 -0.501244 -1.417294         0     0   0.679363  \n",
+       "1 -1.114970 -1.574335 -3.844723         0     0   1.212040  \n",
+       "2 -1.300881 -1.574335 -4.792447         0     1  -0.871667  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +529,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/nfs/home/maxa/data/semisynth_btr/scholar_ct/'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,27 +559,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "train_0         3.547939\n",
-       "train_1         0.105846\n",
-       "train_2        -0.681302\n",
-       "train_3         1.719629\n",
-       "train_4         3.303026\n",
-       "                 ...    \n",
-       "train_49995    11.059970\n",
-       "train_49996     9.632751\n",
-       "train_49997     1.672547\n",
-       "train_49998     2.189951\n",
-       "train_49999     5.829085\n",
+       "train_0       -1.417294\n",
+       "train_1       -3.844723\n",
+       "train_2       -4.792447\n",
+       "train_3       -4.491280\n",
+       "train_4        2.867209\n",
+       "                 ...   \n",
+       "train_49995    6.753453\n",
+       "train_49996   -0.350063\n",
+       "train_49997   -5.172771\n",
+       "train_49998   -6.437998\n",
+       "train_49999   -2.810394\n",
        "Name: synth_y, Length: 50000, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,16 +597,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_covars = semisynth_data[[\"Leisure\",\"av_score\"]].astype(\"float32\") # choose which features to include"
+    "#train_covars = semisynth_data[[\"Leisure\",\"av_score\"]].astype(\"float32\") # choose which features to include\n",
+    "train_covars = semisynth_data[[\"av_score\"]].astype(\"float32\") # choose which features to include"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,16 +625,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(50000, 2)"
+       "(50000, 1)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -613,89 +669,77 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Leisure</th>\n",
        "      <th>av_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>train_0</th>\n",
-       "      <td>0.0</td>\n",
        "      <td>-0.501244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_1</th>\n",
-       "      <td>0.0</td>\n",
        "      <td>-1.574335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_2</th>\n",
-       "      <td>0.0</td>\n",
        "      <td>-1.574335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_3</th>\n",
-       "      <td>0.0</td>\n",
        "      <td>-0.501244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_4</th>\n",
-       "      <td>0.0</td>\n",
        "      <td>-2.468577</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_49995</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.035301</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_49996</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.002634</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_49997</th>\n",
-       "      <td>0.0</td>\n",
        "      <td>-0.143547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_49998</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.035301</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>train_49999</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.750695</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>50000 rows × 2 columns</p>\n",
+       "<p>50000 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Leisure  av_score\n",
-       "train_0          0.0 -0.501244\n",
-       "train_1          0.0 -1.574335\n",
-       "train_2          0.0 -1.574335\n",
-       "train_3          0.0 -0.501244\n",
-       "train_4          0.0 -2.468577\n",
-       "...              ...       ...\n",
-       "train_49995      1.0  0.035301\n",
-       "train_49996      1.0  2.002634\n",
-       "train_49997      0.0 -0.143547\n",
-       "train_49998      1.0  0.035301\n",
-       "train_49999      1.0  0.750695\n",
+       "             av_score\n",
+       "train_0     -0.501244\n",
+       "train_1     -1.574335\n",
+       "train_2     -1.574335\n",
+       "train_3     -0.501244\n",
+       "train_4     -2.468577\n",
+       "...               ...\n",
+       "train_49995  0.035301\n",
+       "train_49996  2.002634\n",
+       "train_49997 -0.143547\n",
+       "train_49998  0.035301\n",
+       "train_49999  0.750695\n",
        "\n",
-       "[50000 rows x 2 columns]"
+       "[50000 rows x 1 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
